Closed
Bug 220708
Opened 22 years ago
Closed 22 years ago
email created with a template does not use template's bgcolor
Categories
(MailNews Core :: Composition, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.6final
People
(Reporter: bedard, Assigned: mscott)
Details
Attachments
(3 files)
148.54 KB,
image/jpeg
|
Details | |
111.75 KB,
image/jpeg
|
Details | |
1.32 KB,
patch
|
Bienvenu
:
superreview+
asa
:
approval1.6+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20030925
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.5) Gecko/20030925
1 - Create template with HTML composer - assign a bgcolor.
2 - Save as mail template.
3 - Click to view template, looks OK.
4 - Double click template to create email and bgcolor is gone.
Reproducible: Always
Steps to Reproduce:
1. See "Details" above.
2.
3.
Actual Results:
See "Details" above.
Expected Results:
email created with template should retain bgcolor of template.
Comment 1•22 years ago
|
||
Hmm. This sounds like bug 170504, but that bug is supposed to be fixed.
The background color is displayed when viewing the template in the 3-pane; the
source includes (e.g.):
<body text="#000000" bgcolor="#ffffcc" link="#000099" vlink="#990099"
alink="#000099">
But on opening a new message, the background reverts:
<body text="#000000" bgcolor="#ffffff" link="#000099" vlink=""
alink="#000099">
Hmm, I notice the 'vlink' attribute changed as well.
Confirming.
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20030923
Status: UNCONFIRMED → NEW
Ever confirmed: true
Summary: email created with a template does not use template's bgcolor → email created with a template does not use template's bgcolor
Comment 2•22 years ago
|
||
Comment 3•22 years ago
|
||
I attached a screenshot. It is "New email from mail template.. "
As you can see, if you click on a template or choose "Edit as New", the
background color, images and many others are gone!
A few days ago, if I remember it correctly, there was an bug report regarding on
this problem for the Thunderbird also.
Due to this problem, it is not practical to make an email template with the
Mozilla based emailer.
I hope it would be solved soon.
Comment 4•22 years ago
|
||
In addition to the bgcolor and images, there is another problem.
As you can see the screenshot, the signature portion of the message is broken
when you choose edit as new or double-click on the template.
New line, seemingly, is added to text. Please look at "Try not to become a man
of success but rather to become a man of value.".
However =+=+... portion has no problem.
And again, below =+=+.. has a problem.
![]() |
Assignee | |
Comment 5•22 years ago
|
||
When loading the template,
nsMsgCompose::SetBodyAttribute
gets called with bgcolor as the attribute to set on the body. Our parser parses
out an empty string instead of the color value to be used here.
All the other values on the body get the right values though. Weird.
Assignee: sspitzer → mscott
![]() |
Assignee | |
Comment 6•22 years ago
|
||
SetBodyAttributes is iterating through the string that has all the attribute
values for the body. It looks for attribute name and attribute value pairs. If
the attribute value ended just before a line return instead of a space, i.e.:
<body bgcolor="#2222"
linkcolor="#2222">
then we would generate an empty attribute value because we were tokenizing off
of a close quote and then a space.
My patch makes it so we end our attribute value tokenization with the quote and
don't expect a trailing space.
![]() |
Assignee | |
Comment 7•22 years ago
|
||
could be a low risk 1.6 candidate
Status: NEW → ASSIGNED
Flags: blocking1.6?
Target Milestone: --- → mozilla1.6final
![]() |
Assignee | |
Updated•22 years ago
|
Attachment #137505 -
Flags: superreview?(bienvenu)
![]() |
||
Updated•22 years ago
|
Attachment #137505 -
Flags: superreview?(bienvenu) → superreview+
Comment 8•22 years ago
|
||
Comment on attachment 137505 [details] [diff] [review]
the fix
a=asa (on behalf of drivers) for checkin to Mozilla 1.6
Attachment #137505 -
Flags: approval1.6+
![]() |
Assignee | |
Comment 9•22 years ago
|
||
fix checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•22 years ago
|
Flags: blocking1.6?
![]() |
||
Comment 10•22 years ago
|
||
Was this a fix for the Windows version only? The bug has been around on Linux
for at least a month. Now in bug 234354
![]() |
Reporter | |
Comment 11•22 years ago
|
||
Notwithstanding any patch, the problem still exists. With 1.6 it appears the
default bgcolor defined in "Edit/Preferences/Mail &
Newsgroups/Composition/Defaults for HTML Messages" overrides any bgcolor defined
in the template.
Paul Bedard
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
![]() |
Assignee | |
Comment 12•22 years ago
|
||
"With 1.6 it appears the
default bgcolor defined in "Edit/Preferences/Mail &
Newsgroups/Composition/Defaults for HTML Messages" overrides any bgcolor defined
in the template."
let's file a new bug for that issue.
This bug was fixing a problem where we were not parsing the property at all from
templates. There was a very real fix that went in for this. Let' use a new bug
for tracking the fact that the property is still ignored if you have adefault
color that you set via prefs.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
![]() |
Reporter | |
Comment 13•22 years ago
|
||
I can't agree. While the patch generated as a result of my initial bug report
may have fixed a real problem, it didn't fix the bug I reported. The additional
information I provided seems to indicate that there may be more than one cause
for the bug. See my additional comment #11. Whatever the prefs bgcolor is set to
overrides the template bgcolor.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 14•22 years ago
|
||
Paul Bedard, I agree with you that the fix checked in does not completely
address the bug that this was reported on. I feel, however, that it is a waste
of time to reopen bugs that have been closed by developers. Bug 234354 is
already open, about the same problem. I suggest re-closing this one, and voting
for that one.
Comment 15•22 years ago
|
||
Looking at this more closely, it appears that Scott's fix addressed a problem I
mentioned in comment 1 when I confirmed this bug -- where the 'vlink' attribute
(for Visited Link color) was being set to an empty string value.
![]() |
Reporter | |
Comment 16•22 years ago
|
||
OK, I see no reason to keep 220708 open as 234354 is the same problem.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Resolution: --- → FIXED
Comment 17•22 years ago
|
||
Paul - I think you're actually right. Between them, Mike and Scott have decided
your bug was about a different issue and have successfully fixed that instead of
what you reported. Having said that, fixing multiple issues with different
patches in one bug is confusing, so now something has been fixed in this bug,
it's better to leave this bug as fixed and use the new bug to cover the issue
that you originally reported.
Thanks for your co-operation. :)
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•