Bug #220708 --> email created with a template does not use template's bgcolor

r=sspitzer
sr=bienvenu
a=asa